--- a/assets/style/cmps/app-header.css
+++ b/assets/style/cmps/app-header.css
@@ -1,11 +1,63 @@
 .app-header {
-  background-color: var(--clr1);
-  color: var(--clr1bg);
+  background-color: #302f2f;
+  color: #ddc8c8;
   padding: 1em;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  min-height: 10vh;
 }
 
+.header-content {
+  display: flex;
+  align-items: center;
+}
+
+.header-img {
+  height: 2.5em;
+  border-radius: 20px;
+  margin-right: 10px;
+}
+
+/* Header title styling */
+.app-header h1 {
+  margin: 0;
+  padding: 0;
+  font-size: 1.5em;
+  font-family: 'Satisfy', sans-serif;
+}
+
+/* Navigation Styling */
+.app-nav {
+  display: flex;
+  gap: 20px;
+  font-family: 'Oswald', sans-serif;
+}
+
+.app-nav a {
+  text-decoration: none;
+  color: inherit;
+  padding: 0.5em 1em;
+  transition: background-color 0.3s;
+  border-radius: 10px;
+}
+
+.app-nav a:hover {
+  background-color: #918888;
+  color: #eee9e9;
+}
+
+/* Mobile view adjustments */
 @media(max-width: 720px) {
   .app-header {
+    flex-direction: column;
+    align-items: flex-start;
     color: var(--clr2bg);
+  }
+
+  .app-nav {
+    gap: 10px;
+    margin-top: 0.5em;
   }
 }
