--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -11,3 +11,9 @@
 /* Components */
 @import 'cmps/app-header.css';
 @import 'cmps/user-msg.css';
+@import 'cmps/book-index.css';
+@import 'cmps/book-filter.css';
+@import 'cmps/about.css';
+@import 'cmps/app-footer.css';
+@import 'cmps/book-edit.css';
+@import 'cmps/book-details.css';
