--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -17,3 +17,5 @@
 @import 'cmps/app-footer.css';
 @import 'cmps/book-edit.css';
 @import 'cmps/book-details.css';
+@import 'cmps/reviews.css';
+@import 'cmps/home.css';
