--- a/assets/style/base/base.css
+++ b/assets/style/base/base.css
@@ -5,6 +5,7 @@
 body {
   margin: 0;
   color: var(--gray3);
+  background-color: #a2e2fb;
 }
 
 h1,
@@ -14,7 +15,7 @@ h4,
 h5,
 h6 {
   margin: .5em 0 .5em;
-  font-family: 'Edu VIC WA NT Beginner', cursive;
+  /* font-family: 'Edu VIC WA NT Beginner', cursive; */
 }
 
 p {
