--- a/assets/style/cmps/app-header.css
+++ b/assets/style/cmps/app-header.css
@@ -20,7 +20,6 @@
   margin-right: 10px;
 }
 
-/* Header title styling */
 .app-header h1 {
   margin: 0;
   padding: 0;
@@ -28,7 +27,6 @@
   font-family: 'Satisfy', sans-serif;
 }
 
-/* Navigation Styling */
 .app-nav {
   display: flex;
   gap: 20px;
@@ -48,12 +46,13 @@
   color: #eee9e9;
 }
 
-/* Mobile view adjustments */
-@media(max-width: 720px) {
+/* For Mobile */
+@media(max-width: 550px) {
   .app-header {
     flex-direction: column;
     align-items: flex-start;
-    color: var(--clr2bg);
+    justify-content: center;
+    align-items: center;
   }
 
   .app-nav {
