--- a/assets/style/cmps/book-edit.css
+++ b/assets/style/cmps/book-edit.css
@@ -6,12 +6,13 @@
     padding: 20px;
     margin: auto;
     width: 500px;
-    background-color: #f4f4f4;
+    color: #001F3F;
+    background-color: #29B6F6;
     border: 1px solid #ccc;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 
-label {
+.editor-container label {
     margin-bottom: 20px;
     width: 100%;
 }
@@ -34,14 +35,13 @@ textarea {
 
 button[type="submit"] {
     padding: 10px 20px;
-    background-color: #007bff;
+    background-color: #FFC1A1;
     border: none;
     border-radius: 15px;
-    color: #fff;
     cursor: pointer;
     transition: background-color 0.5s;
 }
 
 button[type="submit"]:hover {
-    background-color: #0056b3;
+    background-color: #FF7043;
 }
