--- a/assets/style/cmps/book-filter.css
+++ b/assets/style/cmps/book-filter.css
@@ -1,6 +1,7 @@
 .book-filter {
     padding: 0.5rem;
-    background-color: rgb(193, 224, 252);
+    background-color: #039BE5;
+    color: #001F3F;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     border-bottom: 2px solid rgb(31, 29, 29);
@@ -19,6 +20,8 @@
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 1em;
+    justify-content: center;
+    align-items: center;
 }
 
 .form-group {
